# drf-multipart-renderer

./: .gitignore  README.md  pyproject.toml
src/drf_multipart_renderer/: __init__.py  multipart_renderer.py
src/tests/: settings.py  test.py
